feat: add singleton update
